--- a/src/app/pages/criar-baralho/criar-baralho.component.scss
+++ b/src/app/pages/criar-baralho/criar-baralho.component.scss
@@ -123,3 +123,14 @@
     }
   }
 }
+
+.header-line {
+  padding: 10px 20px;
+  background-color: #107c10;
+  margin: 1rem;
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+
+}
