--- a/src/app/pages/pagina-entrada/pagina-entrada.component.html
+++ b/src/app/pages/pagina-entrada/pagina-entrada.component.html
@@ -1,6 +1,6 @@
 <div class="welcome-page">
     <header class="welcome-header">
-      <h1>Bem-Vindo ao Gerenciador de Baralhos TCG - <b>Gustavo Vasconcelos</b></h1>
+      <h1>Gerenciador de Baralhos TCG - <b>Gustavo Vasconcelos</b></h1>
       <p>Prepare-se para gerenciar suas coleções como um comandante!</p>
     </header>
     <img src="assets/pokemon-logo.png" alt="Imagem da logo" class="pokemon-image"> 
