--- a/src/app/shared/components/menu-navegacao/menu-navegacao.component.html
+++ b/src/app/shared/components/menu-navegacao/menu-navegacao.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar">
   <ul>
-    <li><a routerLink="/" routerLinkActive="router-link-active" [routerLinkActiveOptions]="{exact: true}">Página de Início</a></li>
+    <li><a routerLink="/" routerLinkActive="router-link-active" [routerLinkActiveOptions]="{exact: true}">Início</a></li>
     <li><a routerLink="/listar-cartas" routerLinkActive="router-link-active">Listar Cartas</a></li>
     <li><a routerLink="/criar-baralho" routerLinkActive="router-link-active">Criar Baralho</a></li>
     <li><a routerLink="/ver-baralhos-criados" routerLinkActive="router-link-active">Ver Baralhos Criados</a></li>
