--- a/src/app/shared/components/menu-navegacao/menu-navegacao.component.scss
+++ b/src/app/shared/components/menu-navegacao/menu-navegacao.component.scss
@@ -1,6 +1,6 @@
 .navbar {
-  background: #107C10;
-  padding: 18px 20px;
+  background: #107c10;
+  padding: 20px 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 
   ul {
