--- a/src/app/baralhos/meus-baralhos/meus-baralhos.component.html
+++ b/src/app/baralhos/meus-baralhos/meus-baralhos.component.html
@@ -1,11 +1,21 @@
 <div class="baralhos-container">
-    <div *ngFor="let baralho of baralhos" class="baralho-card">
-        <h3>{{ baralho.nome }}</h3>
-        <ul>
-            <li *ngFor="let carta of baralho.cartas">
-                <img [src]="carta.images.small" alt="{{ carta.name }}">
-                <p>{{ carta.name }}</p>
-            </li>
-        </ul>
+    <h1>Meus Baralhos</h1>
+    <div class="grid">
+      <div *ngFor="let baralho of baralhos" class="baralho-card">
+        <h2>{{ baralho.name }}</h2>
+        <p>Total Cartas: {{ baralho.cards.length }}</p>
+        <p>Total HP: {{ sumHP(baralho.cards) }}</p>
+        <div class="card-list">
+          <div *ngFor="let card of baralho.cards" class="card-detail">
+            <img src="{{ card.images.small }}" alt="{{ card.name }}">
+            <div class="card-info">
+              <h3>{{ card.name }}</h3>
+              <p>HP: {{ card.hp }}</p>
+              <p>Tipo: {{ card.types.join(', ') }}</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-</div>
+  </div>
+  
