--- a/src/app/pages/criar-baralho/criar-baralho.component.html
+++ b/src/app/pages/criar-baralho/criar-baralho.component.html
@@ -1,13 +1,21 @@
 <div class="criar-baralho-container">
+  <div class="guia-container">
+    <h1>Como Criar Seu Baralho</h1>
+    <ul>
+      <li>Digite um <strong>nome para o seu baralho</strong> no campo indicado.</li>
+      <li>Adicione cartas ao baralho navegando pela lista abaixo e clicando em <strong>Adicionar ao Baralho</strong> para cada carta desejada.</li>
+      <li>Você pode adicionar até <strong>4 cópias</strong> da mesma carta ao seu baralho.</li>
+      <li>O baralho deve ter <strong>entre 24 e 60 cartas</strong> para ser válido.</li>
+      <li>Clique em <strong>Criar Baralho</strong> uma vez que seu baralho atenda aos requisitos para salvá-lo.</li>
+    </ul>
+  </div>
   <div class="header-line">
     <input [(ngModel)]="nomeDoBaralho" placeholder="Nome do Baralho" type="text" class="deck-name-input">
     <button (click)="salvarBaralho()" [disabled]="!podeSalvarBaralho()">Criar Baralho</button>
   </div>
   <div *ngIf="cartasNoBaralho.length > 0" class="deck-summary">
     <h2>Cartas no Baralho: {{ nomeDoBaralho || 'Novo Baralho' }}</h2>
-  
     <app-spinner *ngIf="carregandoBaralho | async"></app-spinner>
-    
     <div *ngIf="!(carregandoBaralho | async)">
       <div *ngFor="let carta of cartasNoBaralho" class="summary-card">
         <span>{{ carta.name }} ({{ contadorDeCartas[carta.name] }})</span>
@@ -15,7 +23,6 @@
       </div>
     </div>
   </div>
-  
   <div class="grid-container">
     <div *ngFor="let carta of (cartas | async)" class="card">
       <img [src]="carta.images.small" alt="{{ carta.name }}">
