--- a/src/app/shared/components/toolbar-top/toolbar-top.component.html
+++ b/src/app/shared/components/toolbar-top/toolbar-top.component.html
@@ -3,10 +3,10 @@
     <h1>Gustavo Vasconcelos</h1>
     <div class="toolbar-right">
       <div class="social-links">
-        <a href="https://www.linkedin.com/in/yourprofile" target="_blank" rel="noopener noreferrer">
+        <a href="https://www.linkedin.com/in/gustavo-vasconcelos-software-engineer/" target="_blank" rel="noopener noreferrer">
           <i class="fab fa-linkedin"></i>
         </a>
-        <a href="https://github.com/yourusername/repository" target="_blank" rel="noopener noreferrer">
+        <a href="https://github.com/sasgustav/uds-gustavo-vasconcelos-frontend-tcg" target="_blank" rel="noopener noreferrer">
           <i class="fab fa-github"></i>
         </a>
       </div>
