--- a/src/app/shared/components/modal-detalhes/modal-detalhes.component.scss
+++ b/src/app/shared/components/modal-detalhes/modal-detalhes.component.scss
@@ -1,14 +1,14 @@
 .modal {
+    display: block;
     position: fixed;
+    z-index: 1000;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
+}  
 
 .modal-content {
     background-color: white;
