--- a/src/app/baralhos/grid-cartas/grid-cartas.component.html
+++ b/src/app/baralhos/grid-cartas/grid-cartas.component.html
@@ -6,7 +6,7 @@
     <h3>{{ carta.name }}</h3>
     <p>HP: {{ carta.hp }} | Tipo: {{ carta.types.join(', ') }}</p>
     <p>Raridade: {{ carta.rarity }}</p>
-    <button class="btn" (click)="abrirModalDetalhes(carta)">Ver Detalhes</button>
+    <button class="btn-add" (click)="abrirModalDetalhes(carta)">Ver Detalhes</button>
   </div>
 </div>
 
