--- a/src/app/baralhos/grid-cartas/grid-cartas.component.scss
+++ b/src/app/baralhos/grid-cartas/grid-cartas.component.scss
@@ -26,8 +26,9 @@
 .btn-add {
   background-color: #007bff;
   color: white;
+  margin: 1rem;
   padding: 10px 20px;
-  border-radius: 8px;
+  border-radius: 25px;
   cursor: pointer;
   transition: background-color 0.2s;
 }
