--- a/src/app/shared/components/modal-detalhes/modal-detalhes.component.scss
+++ b/src/app/shared/components/modal-detalhes/modal-detalhes.component.scss
@@ -1,5 +1,7 @@
 .modal {
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     position: fixed;
     z-index: 1000;
     left: 0;
@@ -7,19 +9,43 @@
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(0,0,0,0.4);
-}  
+    background-color: rgba(0, 0, 0, 0.6); // Fundo mais escuro
+}
 
 .modal-content {
-    background-color: white;
+    background-color: #f4f4f4;
     padding: 20px;
     border-radius: 10px;
     width: 80%;
-    max-width: 500px;
+    max-width: 600px;
+    margin: auto;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); // Sombra para dar destaque
 }
 
 .close {
     float: right;
     font-size: 28px;
-    cursor: pointer;
+    font-weight: bold;
+    color: #107c10; // Cor verde Xbox
+    cursor: pointer; 
+    &:hover {
+        color: #d00; // Vermelho ao passar o mouse
+    }
+}
+
+.table-details {
+    width: 100%;
+    margin-top: 20px;
+    border-collapse: collapse;
+
+    th, td {
+        padding: 8px;
+        text-align: left;
+        border-bottom: 1px solid #ddd; // Linhas entre células
+    }
+
+    th {
+        background-color: #107c10;
+        color: white;
+    }
 }
