--- a/src/app/shared/components/modal-detalhes/modal-detalhes.component.scss
+++ b/src/app/shared/components/modal-detalhes/modal-detalhes.component.scss
@@ -9,7 +9,7 @@
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(0, 0, 0, 0.6); // Fundo mais escuro
+    background-color: rgba(0, 0, 0, 0.6);
 }
 
 .modal-content {
@@ -19,17 +19,17 @@
     width: 80%;
     max-width: 600px;
     margin: auto;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); // Sombra para dar destaque
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .close {
     float: right;
     font-size: 28px;
     font-weight: bold;
-    color: #107c10; // Cor verde Xbox
+    color: #107c10;
     cursor: pointer; 
     &:hover {
-        color: #d00; // Vermelho ao passar o mouse
+        color: #d00;
     }
 }
 
@@ -41,7 +41,7 @@
     th, td {
         padding: 8px;
         text-align: left;
-        border-bottom: 1px solid #ddd; // Linhas entre células
+        border-bottom: 1px solid #ddd;
     }
 
     th {
