--- a/src/app/pages/listar-baralhos/listar-baralhos.component.html
+++ b/src/app/pages/listar-baralhos/listar-baralhos.component.html
@@ -1,1 +1,5 @@
-<app-grid-cartas></app-grid-cartas>
+<app-spinner [isLoading]="isLoading"></app-spinner>
+
+<div *ngIf="!isLoading">
+  <app-grid-cartas></app-grid-cartas>
+</div>
