--- a/src/app/shared/components/spinner/spinner.component.scss
+++ b/src/app/shared/components/spinner/spinner.component.scss
@@ -7,12 +7,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgba(0, 0, 0, 0.5); // Fundo semitransparente
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .spinner {
-    border: 5px solid rgba(255, 255, 255, 0.2); // Cor mais clara para o círculo incompleto
-    border-top-color: #21D760; // Verde Xbox para a parte superior do spinner
+    border: 5px solid rgba(255, 255, 255, 0.2);
+    border-top-color: #21D760;
     border-radius: 50%;
     width: 50px;
     height: 50px;
