--- a/src/app/pages/criar-baralho/criar-baralho.component.html
+++ b/src/app/pages/criar-baralho/criar-baralho.component.html
@@ -1,13 +1,15 @@
 <div class="criar-baralho-container">
   <div class="guia-container">
-    <h1>Como Criar Seu Baralho</h1>
-    <ul>
-      <li>Digite um <strong>nome para o seu baralho</strong> no campo indicado.</li>
-      <li>Adicione cartas ao baralho navegando pela lista abaixo e clicando em <strong>Adicionar ao Baralho</strong>
-        para cada carta desejada.</li>
-      <li>Você pode adicionar até <strong>4 cópias</strong> da mesma carta ao seu baralho.</li>
-      <li>O baralho deve ter <strong>entre 24 e 60 cartas</strong> para ser válido.</li>
-      <li>Clique em <strong>Criar Baralho</strong> uma vez que seu baralho atenda aos requisitos para salvá-lo.</li>
+    <h1 class="guia-titulo">Como Criar Seu Baralho</h1>
+    <ul class="guia-lista">
+      <li><span class="icon-pencil"></span>Digite um <strong>nome para o seu baralho</strong> no campo indicado.</li>
+      <li><span class="icon-cards"></span>Adicione cartas ao baralho navegando pela lista abaixo e clicando em
+        <strong>Adicionar ao Baralho</strong> para cada carta desejada.</li>
+      <li><span class="icon-copy"></span>Você pode adicionar até <strong>4 cópias</strong> da mesma carta ao seu
+        baralho.</li>
+      <li><span class="icon-check"></span>O baralho deve ter <strong>entre 24 e 60 cartas</strong> para ser válido.</li>
+      <li><span class="icon-save"></span>Clique em <strong>Criar Baralho</strong> uma vez que seu baralho atenda aos
+        requisitos para salvá-lo.</li>
     </ul>
   </div>
   <div class="header-line">
