--- a/src/app/pages/criar-baralho/criar-baralho.component.html
+++ b/src/app/pages/criar-baralho/criar-baralho.component.html
@@ -2,13 +2,13 @@
   <div class="guia-container">
     <h1 class="guia-titulo">Como Criar Seu Baralho</h1>
     <ul class="guia-lista">
-      <li><span class="icon-pencil"></span>Digite um <strong>nome para o seu baralho</strong> no campo indicado.</li>
+      <li><span class="icon-pencil"></span>Digite um nome para o seu baralho no campo indicado.</li>
       <li><span class="icon-cards"></span>Adicione cartas ao baralho navegando pela lista abaixo e clicando em
-        <strong>Adicionar ao Baralho</strong> para cada carta desejada.</li>
-      <li><span class="icon-copy"></span>Você pode adicionar até <strong>4 cópias</strong> da mesma carta ao seu
+        Adicionar ao Baralho para cada carta desejada.</li>
+      <li><span class="icon-copy"></span>Você pode adicionar até 4 cópias da mesma carta ao seu
         baralho.</li>
-      <li><span class="icon-check"></span>O baralho deve ter <strong>entre 24 e 60 cartas</strong> para ser válido.</li>
-      <li><span class="icon-save"></span>Clique em <strong>Criar Baralho</strong> uma vez que seu baralho atenda aos
+      <li><span class="icon-check"></span>O baralho deve ter entre 24 e 60 cartas para ser válido.</li>
+      <li><span class="icon-save"></span>Clique em Criar Baralho uma vez que seu baralho atenda aos
         requisitos para salvá-lo.</li>
     </ul>
   </div>
