--- a/src/app/baralhos/meus-baralhos/meus-baralhos.component.html
+++ b/src/app/baralhos/meus-baralhos/meus-baralhos.component.html
@@ -1,19 +1,20 @@
 <div class="baralhos-container">
     <h1>Meus Baralhos</h1>
     <div *ngIf="baralhos.length > 0">
-      <div *ngFor="let baralho of baralhos" class="baralho-card">
-        <h2>{{ baralho.nome }}</h2>
+        <div *ngFor="let baralho of baralhos; let i = index" class="baralho-card">
+        <h2>{{ baralho.name }}</h2>
+        {{ baralhos | json }}
         <p>Total de Cartas: {{ baralho.cards.length }}</p>
         <p>Total HP: {{ sumHP(baralho.cards) }}</p>
         <div class="actions">
           <button (click)="editarBaralho(baralho)">Editar</button>
-          <button (click)="removerBaralho(baralho.nome)">Remover</button>
+          <button (click)="removerBaralho(baralho.name)">Remover</button>
           <button (click)="verDetalhes(baralho)">Detalhes</button>
         </div>
       </div>
     </div>
-    <div *ngIf="baralhos.length === 0">
-      <p>Nenhum baralho foi criado ainda.</p>
-    </div>
+    <div *ngIf="baralhos.length === 0" class="no-baralhos">
+        Nenhum baralho encontrado.
+    </div>    
   </div>
   
