--- a/src/app/baralhos/meus-baralhos/meus-baralhos.component.html
+++ b/src/app/baralhos/meus-baralhos/meus-baralhos.component.html
@@ -1,18 +1,24 @@
 <div class="baralhos-container">
-    <h1>Meus Baralhos</h1>
-    <div *ngIf="baralhos.length > 0">
-        <div *ngFor="let baralho of baralhos; let i = index" class="baralho-card">
-        <h2>{{ baralho.nome || baralho.name }}</h2>
-        <p>Total de Cartas: {{ baralho.cards.length }}</p>
-        <p>Total HP: {{ sumHP(baralho.cards) }}</p>
-        <div class="actions">
-          <button (click)="editarBaralho(baralho)">Editar</button>
-          <button (click)="removerBaralho(baralho.nome || baralho.name)">Remover</button>
-          <button (click)="verDetalhes(baralho)">Detalhes</button>
-        </div>
+  <h1>Meus Baralhos</h1>
+  <div *ngIf="baralhos.length > 0">
+      <div *ngFor="let baralho of baralhos" class="baralho-card">
+          <h2>{{ baralho.nome || baralho.name }}</h2>
+          <p>Total de Cartas: {{ baralho.cards.length }}</p>
+          <p>Total HP: {{ sumHP(baralho.cards) }}</p>
+          <p>Número de Pokémons: {{ contarTipos(baralho.cards, 'Pokémon') }}</p>
+          <p>Número de Treinadores: {{ contarTipos(baralho.cards, 'Trainer') }}</p>
+          <p>Tipos Únicos: {{ contarTiposUnicos(baralho.cards) }}</p>
+          <div class="card-types">
+              <span *ngFor="let type of listarTiposUnicos(baralho.cards)" class="type-badge">{{ type }}</span>
+          </div>
+          <div class="actions">
+              <button (click)="editarBaralho(baralho)">Editar</button>
+              <button (click)="removerBaralho(baralho.nome || baralho.name)">Remover</button>
+              <button (click)="verDetalhes(baralho)">Detalhes</button>
+          </div>
       </div>
-    </div>
-    <div *ngIf="baralhos.length === 0" class="no-baralhos">
-        Nenhum baralho encontrado.
-    </div>    
+  </div>
+  <div *ngIf="baralhos.length === 0" class="no-baralhos">
+      Nenhum baralho encontrado.
+  </div>    
 </div>
