--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,6 +32,6 @@ nav ul {
   .container {
     display: flex;
     flex-direction: column;
-    min-height: 100vh; /* Altura mínima da tela */
+    min-height: 100vh;
   }
   
