--- a/src/app/baralhos/meus-baralhos/meus-baralhos.component.html
+++ b/src/app/baralhos/meus-baralhos/meus-baralhos.component.html
@@ -4,19 +4,19 @@
     <div *ngFor="let baralho of baralhos" class="baralho-card">
       <h2>{{ baralho.nome || baralho.name }}</h2>
       <div class="baralho-info">
-        <p>Total de Cartas: {{ baralho.cards.length }}</p>
-        <p>Total HP: {{ sumHP(baralho.cards) }}</p>
-        <p>Número de Pokémons: {{ contarTipos(baralho.cards, 'Pokémon') }}</p>
-        <p>Número de Treinadores: {{ contarTipos(baralho.cards, 'Trainer') }}</p>
-        <p>Tipos Únicos: {{ contarTiposUnicos(baralho.cards) }}</p>
+        <p><i class="fas fa-layer-group"></i> Total de Cartas: {{ baralho.cards.length }}</p>
+        <p><i class="fas fa-heartbeat"></i> Total HP: {{ sumHP(baralho.cards) }}</p>
+        <p><i class="fas fa-dragon"></i> Número de Pokémons: {{ contarTipos(baralho.cards, 'Pokémon') }}</p>
+        <p><i class="fas fa-user-shield"></i> Número de Treinadores: {{ contarTipos(baralho.cards, 'Trainer') }}</p>
+        <p><i class="fas fa-palette"></i> Tipos Únicos: {{ contarTiposUnicos(baralho.cards) }}</p>
         <div class="card-types">
           <span *ngFor="let type of listarTiposUnicos(baralho.cards)" class="type-badge">{{ type }}</span>
         </div>
       </div>
       <div class="actions">
-        <button (click)="editarBaralho(baralho)">Editar</button>
-        <button (click)="removerBaralho(baralho.nome || baralho.name)">Remover</button>
-        <button (click)="verDetalhes(baralho)">Detalhes</button>
+        <button (click)="editarBaralho(baralho)"><i class="fas fa-edit"></i> Editar</button>
+        <button (click)="removerBaralho(baralho.nome || baralho.name)"><i class="fas fa-trash-alt"></i> Remover</button>
+        <button (click)="verDetalhes(baralho)"><i class="fas fa-info-circle"></i> Detalhes</button>
       </div>
     </div>
   </div>
